# game_remover-rust

./: Cargo.toml  Dioxus.toml  README.md  tailwind.css
.github/workflows/: rust.yml
assets/: main.css
src/: main.rs
