[package]
name = "game-remover-rust"
version = "0.1.0"
authors = ["pastaya <contact@pastaya.net>"]
edition = "2021"

[features]
default = ["desktop"]
web = []
desktop = []
mobile = []

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
