[package]
name = "game-remover-rust"
version = "0.1.0"
authors = ["pastaya <contact@pastaya.net>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
human-panic = "2.0.4"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["full"] }
